# Low_Level_Design_In_CPP

./: .gitignore  CMakeLists.txt  README.md  interface_segregation_p.cpp  run_cmd.txt  single_respo.cpp
Decorator_Design_Pattern/: Decorator.cpp
Desgin Google Docs/include/: Document.hpp  DocumentElement.hpp  ImageElement.hpp  TextElement.hpp
Desgin Google Docs/src/: desgin_google_docs.cpp
Factory_Desgin_Pattern/: Factory.cpp
Notification_Engine_System_Desgin/: Notification.cpp  file.txt
Observer_Desgin_Pattern/: Observer.cpp
Observer_Design_Pattern/: Observer.cpp
SOLID/: .gitignore  open_close.cpp
SOLID/SOLID/: dependency_inversion_p.cpp  interface_segregation_p.cpp
SOLID/single_respo_principle/: liskov_principle.cpp
Strategy_Desgin_Pattern/: Strategy.cpp
Zomato_System_Desgin/: main.cpp
Zomato_System_Desgin/include/models/: DeliveryOrder.h  MenuItem.h  Order.h  PickupOrder.h  Restaurant.h  User.h
Zomato_System_Desgin/include/patterns/: CreditCard.h  IOrderFactory.h  ScheduleOrderFactory.h
Zomato_System_Desgin/include/services/: NotificationService.h  RestaurantManager.h
Zomato_System_Desgin/src/models/: Order.cpp
Zomato_System_Design/: main.cpp
Zomato_System_Design/include/models/: Cart.h
Zomato_System_Design/include/patterns/: IPaymentStrategy.h  NetBanking.h  NowOrderFactory.h  UPI.h
Zomato_System_Design/include/services/: OrderManager.h
single_respo_principle/: single_responsibility.cpp
